Atualizando o microserviço 'cliente'

--- a/ConfigServer/src/main/resources/config/sales-service.yml
+++ b/ConfigServer/src/main/resources/config/sales-service.yml
@@ -9,7 +9,7 @@ spring:
 
   data:
     mongodb:
-      uri:
+      uri: mongodb://admin:admin@127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.3.2
       database: salesdb
       auto-index-creation: true
 
