--- a/ConfigServer/src/main/resources/config/cliente-service.yml
+++ b/ConfigServer/src/main/resources/config/cliente-service.yml
@@ -9,7 +9,7 @@ spring:
       active: native
   data:
     mongodb:
-      uri: 
+      uri: mongodb://admin:admin@127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.3.2
       database: clientedb
       auto-index-creation: true
 application-version: 1.0	  
