--- a/ConfigServer/src/main/resources/config/product-service.yml
+++ b/ConfigServer/src/main/resources/config/product-service.yml
@@ -9,6 +9,6 @@ spring:
  
   data:
     mongodb: 
-      uri:
+      uri: mongodb://admin:admin@127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.3.2
       database: productdb
       auto-index-creation: true
